maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  setDirection(Direction.dir)
  ^Escaper:27: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur == false) {
  ^Escaper:30: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^